<resources>
    <string name="app_name">FitCompany</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">NEXT</string>
    <string name="skip">CONTATTA</string>
    <string name="btn_accesso_activity_menu">Accesso</string>

    <string name="Titolo_activity_schede">Elenco schede</string>

    <string name="SelezionaDay_activity_allena">Seleziona giorno</string>
    <string name="Btn_activity_allena">Salva</string>
    <string name="title_activity_news">News</string>

    <string name="Nome_activity_utente">Nome:</string>
    <string name="Cognome_activity_utente">Cognome:</string>
    <string name="InizioAbb_activity_utente">Inizio abb:</string>
    <string name="FineAbb_activity_utente">Fine abb:</string>
    <string name="Peso_activity_utente">Peso:</string>
    <string name="Btn_activity_utente">Salva</string>
    <string name="Btn_logout_activity_utente">Logout</string>

    <string name="Titolo_activity_grafico_peso">Grafici peso corporeo</string>

    <string name="Titolo_activity_grafico_afforlamento">Distribuzione allenamenti adesso:</string>

    <string name="btn_invia_contatta_domanda">Invia</string>

    <string name="Txt_persone_GrAff">Persone in palestra: </string>

    <string name="Titolo_activity_crono">Timer</string>

    <string name="Info_activity_signup">For access data contact your gym owner</string>
    <string name="link_activity_signup">Already a member? Login</string>

</resources>
