<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imgProfiloUtente"
            android:layout_width="183dp"
            android:layout_height="183dp"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@mipmap/profilo"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="-1dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProfiloUtente"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:id="@+id/txtUtenteNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtUtenteCognome"
                android:layout_alignStart="@+id/txtUtenteCognome"
                android:layout_marginBottom="20dp"
                android:text="da settare dal DB"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/txtUtenteCognome"
                app:layout_constraintLeft_toLeftOf="@+id/txtUtenteCognome"
                app:layout_constraintRight_toRightOf="@+id/txtUtenteCognome"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <TextView
                android:id="@+id/txtUtenteCognome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtTitoloCognome"
                android:layout_alignBottom="@+id/txtTitoloCognome"
                android:layout_alignStart="@+id/txtUtenteInizioAbb"
                android:text="da settare dal DB"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/txtUtenteInizioAbb"
                app:layout_constraintLeft_toLeftOf="@+id/txtUtenteInizioAbb"
                app:layout_constraintRight_toRightOf="@+id/txtUtenteInizioAbb"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <TextView
                android:id="@+id/txtUtenteInizioAbb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtTitoloIniAbb"
                android:layout_alignBottom="@+id/txtTitoloIniAbb"
                android:layout_alignStart="@+id/txtUtenteFineAbb"
                android:text="da settare dal DB"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/txtUtenteFineAbb"
                app:layout_constraintLeft_toLeftOf="@+id/txtUtenteFineAbb"
                app:layout_constraintRight_toRightOf="@+id/txtUtenteFineAbb"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <TextView
                android:id="@+id/txtUtenteFineAbb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtTitoloFineAbb"
                android:layout_alignBottom="@+id/txtTitoloFineAbb"
                android:layout_marginStart="41dp"
                android:layout_toEndOf="@+id/txtTitoloIniAbb"
                android:text="da settare dal DB"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSalvaPeso"
                app:layout_constraintLeft_toLeftOf="@+id/edtPeso"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1" />

            <TextView
                android:id="@+id/txtTitoloNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtUtenteNome"
                android:layout_alignBottom="@+id/txtUtenteNome"
                android:layout_alignParentStart="true"
                android:layout_marginStart="57dp"
                android:text="@string/Nome_activity_utente"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/txtTitoloCognome"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1" />

            <TextView
                android:id="@+id/txtTitoloCognome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtTitoloIniAbb"
                android:layout_alignStart="@+id/txtTitoloNome"
                android:layout_marginBottom="21dp"
                android:text="@string/Cognome_activity_utente"
                android:textSize="20dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtUtenteCognome"
                app:layout_constraintLeft_toLeftOf="@+id/txtTitoloNome"
                tools:layout_constraintBaseline_creator="1"
                tools:layout_constraintLeft_creator="1" />

            <TextView
                android:id="@+id/txtTitoloIniAbb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtTitoloFineAbb"
                android:layout_alignEnd="@+id/txtTitoloCognome"
                android:layout_marginBottom="18dp"
                android:text="@string/InizioAbb_activity_utente"
                android:textSize="20dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtUtenteInizioAbb"
                app:layout_constraintLeft_toLeftOf="@+id/txtTitoloCognome"
                tools:layout_constraintBaseline_creator="1"
                tools:layout_constraintLeft_creator="1" />

            <TextView
                android:id="@+id/txtTitoloFineAbb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtTitoloCognome"
                android:layout_centerVertical="true"
                android:text="@string/FineAbb_activity_utente"
                android:textSize="20dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtUtenteFineAbb"
                app:layout_constraintLeft_toLeftOf="@+id/txtTitoloIniAbb"
                tools:layout_constraintBaseline_creator="1"
                tools:layout_constraintLeft_creator="1" />

            <TextView
                android:id="@+id/txtTitoloPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtTitoloFineAbb"
                android:layout_below="@+id/txtUtenteFineAbb"
                android:layout_marginTop="17dp"
                android:text="@string/Peso_activity_utente"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="@+id/txtTitoloFineAbb"
                app:layout_constraintTop_toBottomOf="@+id/txtTitoloFineAbb"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <EditText
                android:id="@+id/edtPeso"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtUtenteFineAbb"
                android:layout_alignTop="@+id/txtTitoloPeso"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnSalvaPeso"
                app:layout_constraintLeft_toRightOf="@+id/txtTitoloFineAbb"
                app:layout_constraintRight_toRightOf="@+id/logoutbt"
                tools:layout_constraintBaseline_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <Button
                android:id="@+id/btnSalvaPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/edtPeso"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:onClick="SalvaPeso"
                android:text="@string/Btn_activity_utente"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1" />

            <Button
                android:id="@+id/logoutbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/txtTitoloFineAbb"
                android:onClick="Logout"
                android:text="@string/Btn_logout_activity_utente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSalvaPeso"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>